--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario Completo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>Formulario Completo</h1>
     <form>
         <fieldset>
-
             <legend>Informações Pessoais</legend>
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name = "nome" placeholder = "Digite seu nome" required maxlength = "100">
@@ -29,7 +28,6 @@
 
             <label for="Website">Website</label>
             <input type="url" id="Website" name="Website" placeholder="https://wwww.seusite.com">
-
         </fieldset>
 
         <fieldset>
@@ -51,10 +49,8 @@
             <input type="checkbox" id="esportes" name="Interesses" value="esportes">
             <label for="esportes">esportes</label>
 
-
             <input type="checkbox" id="moda" name="Interesses" value="moda">
             <label for="moda">moda</label>
-
 
             <label for="Cidade">Cidade:</label>
             <select name="Cidade" id="Cidade" required>
@@ -64,7 +60,6 @@
                 <option value="Brasilia">Brasilia</option>
                 <option value="Salvador">Salvador</option>
             </select>
-
             <label for="Descricao">Descrição</label>
             <textarea name="Descrição" id="Descricao" rows="5" placeholder="Deixe sua mensagem!" required></textarea>
         </fieldset>
@@ -74,11 +69,7 @@
             <label for="foto">Foto de Perfil</label>
             <input type= "file" id="foto" name="foto" accept="imagem/*">
         </fieldset>
-
         <button type="submit">Enviar</button> </button>
-
-
-
     </form>
 </body>
 </html>
